# MinecraftClone

./: CMakeLists.txt  README.md
include/core/: Camera.h  Engine.h  Frustum.h  Window.h
include/render/: Shader.h  TextureArray.h
include/world/: Block.h  Chunk.h  ChunkMesher.h  World.h
scripts/: setup_dependencies.bat
src/: main.cpp
src/core/: Camera.cpp  Engine.cpp  Window.cpp
src/render/: Shader.cpp  TextureArray.cpp
src/world/: Chunk.cpp  ChunkMesher.cpp  World.cpp
